# iter

./: .dockerignore  .gitattributes  .gitignore  .mcp-context  APEX_CLARIFICATIONS.md  ARCHITECTURE_BOUNDARY.md  BUYER_README.md  CERTIFICATION_DOSSIER.md  CHANGELOG.md  CODEOWNERS  CONNECTOME_V2_SCAFFOLD.md  CONTRIBUTING.md  CREDIBILITY_CLOSURE.md  Cargo.toml  Dockerfile  EXECUTION_REPORT.md  LICENSE  LTS_STRATEGY.md  PILOT_NEXT_STEPS.md  README.md  RELEASE.md  RELEASE_NOTES_v0.3.0_phase4.md  SCG_PILOT_01_LAUNCH.md  SECURITY.md  SPECIFICATION_ALIGNMENT.md  STATUS.md  SUBSTRATE_FREEZE.md  TAG_PROVENANCE.md  WARP.md  WARP_EXECUTION_REPORT.md  build.rs  fix_tests.py  pr_body_public_cleanup_v6.md  scg_certification_harness.ps1  scg_demo_package_v1.0_certified.sha256  scg_determinism_validator.ps1
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS
.github/workflows/: code_quality.yml  connectome_audit.yml  mcp_integration.yml  public_boundary_guard.yml  release_gate.yml  scg-cert.yml  sdk_ci.yml  sdk_publish_check.yml  substrate_guard.yml  verify_rules_consistency.yml
.warp/: context.md
audits/: .gitkeep
audits/stability_v0.2.0/: repo_manifest.sha256  timestamp.txt
audits/stability_v1.0.0/: repo_manifest.sha256  timestamp.txt
demo_expected/: 07_checksums.txt
demos/: LLM_IN_THE_LOOP.md  cognitive_physics_demo.ps1  determinism_demo.ps1  prompts_synthetic.txt  scg_andrei_demo.sh  scg_demo.toml
deployment/pilot/: DEPLOYMENT_STATUS.md  README.md  activate-substrate.sh  aggregate-day1.ps1  mcp_client_config.json  monitor-invariants.ps1  network-policy.yaml  otel-collector.yaml  replay-episode.ps1  resource-quota.yaml  scg-mcp-deployment.yaml  scg_mcp_pilot.yml  time-sync-checker.yaml  validate-time-sync-proxy.ps1
directives/: scg_edge_bind_stall_v1.yml
docs/: APEX_DEMO_DIRECTIVE_v2.0.md  ARCHITECTURE.md  ATTACK_SURFACE.md  DIRECTIVE_CHANGELOG.md  GOVERNANCE.md  Iter_Demo_Executive_Summary.md  Iter_Demo_Validation_Report_v1.0.md  Iter_Hardening_Directive_v2.0.md  MCP_API.md  README.md  RELEASE_NOTES_PUBLIC_v0.3.0.md  SCG_Demo_Executive_Summary.md  SCG_Demo_Validation_Report_v1.0.md  SCG_Hardening_Directive_v2.0.md  SECURITY.md  TESTING.md
docs/directives/: SG-ITER-PILOT-AUTH-02_v2.1.0.md  SG-SCG-PILOT-AUTH-02_v2.1.0.md
docs/internal/: Iter_Demo_Validation_Report_v1.0_INTERNAL.md  RELEASE_NOTES_v0.3.0_phase4_INTERNAL.md  pr_body_public_cleanup_v6_INTERNAL.md
docs/pilot/: CONSOLE_HYGIENE.md  ITER_PILOT_LOAD_BALANCE_01_v1.0.0.md  ITER_PILOT_REPLAY_HARNESS_v1.0.0.md  ITER_PILOT_TIME_SYNC_EXCEPTION_v1.0.0.md  SCG_PILOT_LOAD_BALANCE_01_v1.0.0.md  SCG_PILOT_REPLAY_HARNESS_v1.0.0.md  SCG_PILOT_TIME_SYNC_EXCEPTION_v1.0.0.md
examples/: cognitive_physics_demo.rs  determinism_demo.rs  mcp_client.rs
examples/internal/: determinism_demo_internal.rs  mcp_reference_harness_internal.rs
governance/: GOVERNANCE.md  SCG_Governance.md  SCG_Governance_v1.1.0.md  SCG_Governance_v1.1.1.md  credibility_log.md
pilot-monitoring/20251117_055337/: invariant-data.csv
pilot-monitoring/20251117_065501/: invariant-data.csv
pilot-monitoring/20251118_155543/: invariant-data.csv
pilot-monitoring/20251118_222721/: invariant-data.csv
pilot-monitoring/20251118_224700/: invariant-data.csv
pilot-monitoring/day1A_20251118_212306/: day1A_T0_record.json
pilot_reports/day0/: README.md  day0_attestation.md  day0_summary_template.json
pilot_reports/day1/: OPERATOR_INSTRUCTIONS.md  T0_record.json  day1_execution_plan.json  day1_interim_status.json  day1_summary_template.json  interruptions.json  load_balance_correction.json  time_sync.json
scg_demo_package/: DEMO_WALKTHROUGH.md  DOCKER_INSTRUCTIONS.md  Dockerfile  PACKAGING_MANIFEST.txt  README.md  RUNBOOK.md  RUN_CERTIFICATION.md  SUBSTRATE_ATTESTATION.txt  SUBSTRATE_OVERVIEW.md
scg_demo_package/demo_expected/: 06_lineage.json
scg_demo_package/demos/: scg_demo.sh  scg_demo_live.ps1  scg_demo_narrator.sh
scripts/: add_scg_header.sh  identity_audit.ps1  identity_commit.ps1  identity_normalize.ps1  identity_revert.ps1  identity_validate.ps1  mcp_relay.ps1  pre-commit  run-cert.ps1  scg_audit.sh
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
sdks/typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
spec/: SCHEMA_VERSION_POLICY.md  mcp_edge_state.schema.json  mcp_error.schema.json  mcp_governor_status.schema.json  mcp_lineage_entry.schema.json  mcp_node_state.schema.json
spec/tools/: mcp_tools.schema.json
src/: caller_context.rs  governance.rs  lib.rs  main.rs  mcp_handler.rs  metrics.rs  scg_core.rs  substrate_runtime.rs  traits.rs  types.rs  validation.rs
src/connectome/: mod.rs  regions.rs  timestep.rs  tracts.rs
src/fault/: governor_correction.rs  mod.rs  quarantine.rs  rollback.rs
src/lineage/: mod.rs  replay_episode.rs  shard.rs  snapshot.rs
src/services/: mod.rs
src/substrate/: mod.rs  stub.rs
src/telemetry/: mod.rs  schema.rs
src/types/: audit.rs  mcp.rs  mod.rs  protocol.rs  substrate.rs  version.rs
tests/: contract_tests.rs  governance_enforcement.rs  governance_invariants.rs  hardening_concurrency.rs  hardening_fuzz.rs  integration_validation.rs  lineage_roundtrip.rs  mcp_fuzz_scenarios.rs  mcp_integration.rs
tests/governance/: error_taxonomy.rs  mod.rs  release_discipline.rs  schema_stability.rs  telemetry.rs  (+1 more)
tools/: scg_cert_phase7_only.ps1
(+55 files in other folders)
