[package]
name = "iter_mcp_server"
version = "0.3.0"
edition = "2021"
description = "Governed Model Context Protocol server with deterministic execution"
authors = ["Only SG Solutions"]

[features]
default = ["full_substrate"]
full_substrate = [
    "dep:scg-sim",
    "dep:scg-energy",
    "dep:scg-governance",
    "dep:scg-ethics",
    "dep:scg-trace",
    "dep:scg-consensus",
    "dep:scg-elasticity",
]
public_stub = []

[[bin]]
name = "iter-server"
path = "src/main.rs"

[lib]
name = "iter_mcp_server"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2.0"

# Concurrency
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# Substrate crates (optional, activated with full_substrate feature)
scg-sim = { path = "../SCG/crates/scg-sim", optional = true }
scg-energy = { path = "../SCG/crates/scg-energy", optional = true }
scg-governance = { path = "../SCG/crates/scg-governance", optional = true }
scg-ethics = { path = "../SCG/crates/scg-ethics", optional = true }
scg-trace = { path = "../SCG/crates/scg-trace", optional = true }
scg-consensus = { path = "../SCG/crates/scg-consensus", optional = true }
scg-elasticity = { path = "../SCG/crates/scg-elasticity", optional = true }

[dev-dependencies]
unicode-normalization = "0.1"
approx = "0.5"
proptest = "1.4"
