[package]
name = "iter_mcp_server"
version = "0.3.0"
edition = "2021"
description = "Governed Model Context Protocol server with deterministic execution"
authors = ["Only SG Solutions"]

[features]
default = ["public_stub"]
# full_substrate: Requires proprietary workspace. Build via private CI or local dev
# with SCG crates available. Not buildable from public repo alone.
full_substrate = []
public_stub = []

[[bin]]
name = "iter-server"
path = "src/main.rs"

[lib]
name = "iter_mcp_server"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2.0"

# Concurrency
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# NOTE: Substrate crates (scg-*) are NOT listed here.
# The public repo builds with public_stub only.
# Full substrate builds require the private workspace with SCG crates
# available at ../SCG. See iter-internal docs for workspace setup.

[dev-dependencies]
unicode-normalization = "0.1"
approx = "0.5"
proptest = "1.4"
